Bug 50173 - Styles and Formatting popup crashes LibreOffice on fluxbox
Summary: Styles and Formatting popup crashes LibreOffice on fluxbox
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.6.0 target:3.5.4
Keywords: regression
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-05-21 07:01 UTC by Björn Michaelsen
Modified: 2016-04-24 20:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
stacktrace (3.79 KB, text/plain)
2012-05-21 07:02 UTC, Björn Michaelsen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Michaelsen 2012-05-21 07:01:06 UTC
1) start libreoffice with gtk vclplugin on fluxbox
2) create a new document
3) press F11 for "styles and formatting" popup window
-> x11 error, LibreOffice aborts

regression vs. 3.4.x
Comment 1 Björn Michaelsen 2012-05-21 07:02:58 UTC
Created attachment 61913 [details]
stacktrace

stacktrace breaking on gdk_x_error
Comment 2 Not Assigned 2012-05-21 07:10:06 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21f8ec1c49efd716669ca55ab946fadd5c97bb7e

fdo#50173: fix Styles and Formatting gtk crasher
Comment 3 Not Assigned 2012-05-21 07:28:00 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4e9eca4feb3115869107d71db464a08448a001aa&g=libreoffice-3-5

fdo#50173: fix Styles and Formatting gtk crasher


It will be available in LibreOffice 3.5.5.
Comment 4 Not Assigned 2012-05-21 07:35:11 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-3-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ae02ce08a270ea7a5c0dd6d37d95a29be2cbbf0&g=libreoffice-3-5-4

fdo#50173: fix Styles and Formatting gtk crasher


It will be available already in LibreOffice 3.5.4.
Comment 5 Michael Meeks 2012-05-21 08:54:51 UTC
so closing :-) thanks Bjoern ! nice work.
Comment 6 Jean-Baptiste Faure 2016-04-24 20:12:42 UTC
Version set from comment #4.

Best regards. JBF