fdo#50173: fix Styles and Formatting gtk crasher

- when using the gtk vcl plugin, pressing F11 in writer crashes
  libreoffice on some systems with an X error
- related: fdo#46687

Change-Id: I235cf327d812b606a357de859b1a959be728d2a1